--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -2496,16 +2496,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main f7131c3] 102\n",
-      " 2 files changed, 43 insertions(+), 39 deletions(-)\n",
-      " create mode 100755 0x01-shell_permissions/102-if_only\n"
+      "[main 3a4cf59] 16\n",
+      " 3 files changed, 38 insertions(+), 46 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/16-whatsnext\n"
      ]
     },
     {
@@ -2513,7 +2513,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   de06374..f7131c3  main -> main\n"
+      "   fb17851..3a4cf59  main -> main\n"
      ]
     }
    ],
@@ -2533,7 +2533,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 17. Star Wars</h4>\n",
+    "<h4> 17. I hate bins</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -2543,99 +2543,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Write a script that will play the StarWars IV episode in the terminal.\n",
-    "\n",
+    "##### Display all the lines in the file /etc/passwd that do not contain the pattern \"bin\".\n",
+    "```bash\n",
+    "$ ./17-hidethisword\n",
+    "##\n",
+    "# User Database\n",
+    "#\n",
+    "# Note that this file is consulted directly only when the system is running\n",
+    "# in single-user mode. At other times this information is provided by\n",
+    "# Open Directory.\n",
+    "#\n",
+    "# See the opendirectoryd(8) man page for additional information about\n",
+    "# Open Directory.\n",
+    "##\n",
+    "$\n",
+    "```\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x01-shell_permissions`\n",
-    "* File: `103-Star_Wars`"
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `17-hidethisword`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x01-shell_permissions/103-Star_Wars\n"
+      "Writing 0x02-shell_redirections/17-hidethisword\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x01-shell_permissions/103-Star_Wars\n",
+    "%%file 0x02-shell_redirections/17-hidethisword\n",
     "#!/bin/bash\n",
-    "telnet towel.blinkenlights.nl"
+    "grep -v \"bin\" /etc/passwd "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting 0x01-shell_permissions/103-Star_Wars\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%file 0x01-shell_permissions/103-Star_Wars\n",
-    "#!/bin/bash\n",
-    "telnet -6 towel.blinkenlights.nl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting 0x01-shell_permissions/103-Star_Wars\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%file 0x01-shell_permissions/103-Star_Wars\n",
-    "#!/bin/bash\n",
-    "telnet [2001:7b8:666:ffff::1:42]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x01-shell_permissions/103-Star_Wars"
+    "chmod u+x 0x02-shell_redirections/17-hidethisword"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trying 2001:7b8:666:ffff::1:42...\n",
-      "telnet: Unable to connect to remote host: Network is unreachable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!./0x01-shell_permissions/103-Star_Wars"
+    "!./0x02-shell_redirections/17-hidethisword"
    ]
   },
   {
