--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -2606,16 +2606,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main b176dc5] StrarWars\n",
-      " 2 files changed, 48 insertions(+), 14 deletions(-)\n",
-      " delete mode 100755 0x01-shell_permissions/103-Stare_Wars\n"
+      "[main ed1c315] 17\n",
+      " 2 files changed, 34 insertions(+), 66 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/17-hidethisword\n"
      ]
     },
     {
@@ -2623,14 +2623,143 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   0581e6e..b176dc5  main -> main\n"
+      "   3a4cf59..ed1c315  main -> main\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"StrarWars\"\n",
+    "git commit -m \"17\"\n",
+    "git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 18. Letters only please</h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Display all lines of the file `/etc/ssh/sshd_config` starting with a letter.\n",
+    "* Include capital letters as well\n",
+    "\n",
+    "```bash\n",
+    "$ ./18-letteronly\n",
+    "SyslogFacility AUTHPRIV\n",
+    "AuthorizedKeysFile  .ssh/authorized_keys\n",
+    "UsePrivilegeSeparation sandbox # Default for new installations.\n",
+    "AcceptEnv LANG LC_*\n",
+    "Subsystem   sftp    /usr/libexec/sftp-server\n",
+    "$\n",
+    "```\n",
+    "\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `18-letteronly`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x02-shell_redirections/18-letteronly\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x02-shell_redirections/18-letteronly\n",
+    "#!/bin/bash\n",
+    "grep '^[A-Za-z]' /etc/ssh/sshd_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "chmod u+x 0x02-shell_redirections/18-letteronly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Include /etc/ssh/sshd_config.d/*.conf\n",
+      "PasswordAuthentication no\n",
+      "ChallengeResponseAuthentication no\n",
+      "UsePAM yes\n",
+      "X11Forwarding yes\n",
+      "PrintMotd no\n",
+      "AcceptEnv LANG LC_*\n",
+      "Subsystem\tsftp\t/usr/lib/openssh/sftp-server\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./0x02-shell_redirections/18-letteronly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main ed1c315] 17\n",
+      " 2 files changed, 34 insertions(+), 66 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/17-hidethisword\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   3a4cf59..ed1c315  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"18\"\n",
     "git push"
    ]
   },
