--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -2735,16 +2735,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main ed1c315] 17\n",
-      " 2 files changed, 34 insertions(+), 66 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/17-hidethisword\n"
+      "[main 2756a94] 18\n",
+      " 2 files changed, 137 insertions(+), 6 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/18-letteronly\n"
      ]
     },
     {
@@ -2752,7 +2752,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   3a4cf59..ed1c315  main -> main\n"
+      "   ed1c315..2756a94  main -> main\n"
      ]
     }
    ],
@@ -2769,6 +2769,117 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 19. A to Z </h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Replace all characters `A` and `c` from input to `Z` and `e` respectively.\n",
+    "\n",
+    "\n",
+    "```bash\n",
+    "julien@ubuntu:/tmp/0x02$ echo 'Replace all characters `A` and `c` from input to `Z` and `e`.' | ./19-AZ \n",
+    "Replaee all eharaeters `Z` and `e` from input to `Z` and `e`.\n",
+    "julien@ubuntu:/tmp/0x02$ \n",
+    "```\n",
+    "\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `19-AZ`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x02-shell_redirections/19-AZ\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x02-shell_redirections/19-AZ\n",
+    "#!/bin/bash\n",
+    "sed 'y/Ac/Ze/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "chmod u+x 0x02-shell_redirections/19-AZ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./0x02-shell_redirections/19-AZ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 2756a94] 18\n",
+      " 2 files changed, 137 insertions(+), 6 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/18-letteronly\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   ed1c315..2756a94  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"19\"\n",
+    "git push"
+   ]
   }
  ],
  "metadata": {
