--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -2836,33 +2836,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "^C\n"
+      "Replaee all eharaeters `Z` and `e` from input to `Z` and `e`.\n"
      ]
     }
    ],
    "source": [
-    "!./0x02-shell_redirections/19-AZ"
+    "!echo 'Replace all characters `A` and `c` from input to `Z` and `e`.' | ./0x02-shell_redirections/19-AZ"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 2756a94] 18\n",
-      " 2 files changed, 137 insertions(+), 6 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/18-letteronly\n"
+      "[main 105fc2c] 19\n",
+      " 2 files changed, 118 insertions(+), 5 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/19-AZ\n"
      ]
     },
     {
@@ -2870,7 +2870,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   ed1c315..2756a94  main -> main\n"
+      "   2756a94..105fc2c  main -> main\n"
      ]
     }
    ],
@@ -2880,6 +2880,13 @@
     "git commit -m \"19\"\n",
     "git push"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
