--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -2826,7 +2826,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting 0x02-shell_redirections/19-AZ\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x02-shell_redirections/19-AZ\n",
+    "#!/bin/bash\n",
+    "tr 'Ac' 'Ze'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2836,7 +2855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2853,16 +2872,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 105fc2c] 19\n",
-      " 2 files changed, 118 insertions(+), 5 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/19-AZ\n"
+      "[main 499a07f] 19\n",
+      " 1 file changed, 15 insertions(+), 8 deletions(-)\n"
      ]
     },
     {
@@ -2870,7 +2888,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   2756a94..105fc2c  main -> main\n"
+      "   105fc2c..499a07f  main -> main\n"
      ]
     }
    ],
