--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -2826,7 +2826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2872,15 +2872,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 499a07f] 19\n",
-      " 1 file changed, 15 insertions(+), 8 deletions(-)\n"
+      "[main 6eba581] 19\n",
+      " 2 files changed, 26 insertions(+), 8 deletions(-)\n"
      ]
     },
     {
@@ -2888,7 +2888,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   105fc2c..499a07f  main -> main\n"
+      "   499a07f..6eba581  main -> main\n"
      ]
     }
    ],
@@ -2905,6 +2905,135 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 20. Without C, you would live in hiago</h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Create a script that removes all letters `c` and `C` from input.\n",
+    "\n",
+    "\n",
+    "```bash\n",
+    "julien@ubuntu:/tmp/0x02$ echo Chicago | ./20-hiago \n",
+    "hiago\n",
+    "julien@ubuntu:/tmp/0x02$  \n",
+    "```\n",
+    "\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `20-hiago`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x02-shell_redirections/19-AZ\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x02-shell_redirections/20-hiago\n",
+    "#!/bin/bash\n",
+    "sed 'y/Ac/Ze/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x02-shell_redirections/20-hiago\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x02-shell_redirections/20-hiago\n",
+    "#!/bin/bash\n",
+    "tr -d 'Cc'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "chmod u+x 0x02-shell_redirections/20-hiago"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./0x02-shell_redirections/20-hiago"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 6eba581] 19\n",
+      " 2 files changed, 26 insertions(+), 8 deletions(-)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   499a07f..6eba581  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"19\"\n",
+    "git push"
+   ]
   }
  ],
  "metadata": {
