--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -2991,32 +2991,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "^C\n"
+      "ool ats and ute ats\n"
      ]
     }
    ],
    "source": [
-    "!./0x02-shell_redirections/20-hiago"
+    "!echo 'Cool Cats and cute cats' | ./0x02-shell_redirections/20-hiago"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 6eba581] 19\n",
-      " 2 files changed, 26 insertions(+), 8 deletions(-)\n"
+      "[main e9fe83e] Cc\n",
+      " 2 files changed, 136 insertions(+), 5 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/20-hiago\n"
      ]
     },
     {
@@ -3024,16 +3025,23 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   499a07f..6eba581  main -> main\n"
+      "   6eba581..e9fe83e  main -> main\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"19\"\n",
+    "git commit -m \"Cc\"\n",
     "git push"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
