--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -2543,7 +2543,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Display all the lines in the file /etc/passwd that do not contain the pattern \"bin\".\n",
+    "##### Display all the lines in the file `/etc/passwd` that do not contain the pattern \"bin\".\n",
     "```bash\n",
     "$ ./17-hidethisword\n",
     "##\n",
@@ -2943,33 +2943,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x02-shell_redirections/19-AZ\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%file 0x02-shell_redirections/20-hiago\n",
-    "#!/bin/bash\n",
-    "sed 'y/Ac/Ze/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing 0x02-shell_redirections/20-hiago\n"
+      "Overwriting 0x02-shell_redirections/20-hiago\n"
      ]
     }
    ],
@@ -2981,7 +2962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2991,7 +2972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -3008,16 +2989,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main e9fe83e] Cc\n",
-      " 2 files changed, 136 insertions(+), 5 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/20-hiago\n"
+      "[main 4e9124c] Cc\n",
+      " 1 file changed, 16 insertions(+), 8 deletions(-)\n"
      ]
     },
     {
@@ -3025,7 +3005,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   6eba581..e9fe83e  main -> main\n"
+      "   e9fe83e..4e9124c  main -> main\n"
      ]
     }
    ],
