--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -2989,15 +2989,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 7e129ae] Cc\n",
-      " 1 file changed, 9 insertions(+), 29 deletions(-)\n"
+      "[main c823c5c] Cc\n",
+      " 1 file changed, 4 insertions(+), 4 deletions(-)\n"
      ]
     },
     {
@@ -3005,7 +3005,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   4e9124c..7e129ae  main -> main\n"
+      "   7e129ae..c823c5c  main -> main\n"
      ]
     }
    ],
@@ -3022,6 +3022,116 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 21. esreveR</h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Create a script that reverse its input.\n",
+    "\n",
+    "\n",
+    "```bash\n",
+    "julien@ubuntu:/tmp/0x02$ echo \"Reverse\" | ./21-reverse \n",
+    "esreveR\n",
+    "julien@ubuntu:/tmp/0x02$ \n",
+    "```\n",
+    "\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `21-reverse`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x02-shell_redirections/21-reverse\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x02-shell_redirections/21-reverse\n",
+    "#!/bin/bash\n",
+    "rev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "chmod u+x 0x02-shell_redirections/21-reverse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "esreveR\n"
+     ]
+    }
+   ],
+   "source": [
+    "!echo \"Reverse\" | ./0x02-shell_redirections/21-reverse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main c823c5c] Cc\n",
+      " 1 file changed, 4 insertions(+), 4 deletions(-)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   7e129ae..c823c5c  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"esreveR\"\n",
+    "git push"
+   ]
   }
  ],
  "metadata": {
