--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -3106,15 +3106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main c823c5c] Cc\n",
-      " 1 file changed, 4 insertions(+), 4 deletions(-)\n"
+      "[main 35e37c5] esreveR\n",
+      " 2 files changed, 116 insertions(+), 4 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/21-reverse\n"
      ]
     },
     {
@@ -3122,7 +3123,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   7e129ae..c823c5c  main -> main\n"
+      "   c823c5c..35e37c5  main -> main\n"
      ]
     }
    ],
@@ -3130,6 +3131,254 @@
     "%%bash\n",
     "git add .\n",
     "git commit -m \"esreveR\"\n",
+    "git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 22. DJ Cut Killer</h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Write a script that displays all users and their home directories, sorted by users.\n",
+    "* Based on the the /etc/passwd file\n",
+    "\n",
+    "\n",
+    "```bash\n",
+    "julien@ubuntu:/tmp/0x02$ cat /etc/passwd\n",
+    "root:x:0:0:root:/root:/bin/bash\n",
+    "daemon:x:1:1:daemon:/usr/sbin:/usr/sbin/nologin\n",
+    "bin:x:2:2:bin:/bin:/usr/sbin/nologin\n",
+    "sys:x:3:3:sys:/dev:/usr/sbin/nologin\n",
+    "sync:x:4:65534:sync:/bin:/bin/sync\n",
+    "games:x:5:60:games:/usr/games:/usr/sbin/nologin\n",
+    "man:x:6:12:man:/var/cache/man:/usr/sbin/nologin\n",
+    "lp:x:7:7:lp:/var/spool/lpd:/usr/sbin/nologin\n",
+    "mail:x:8:8:mail:/var/mail:/usr/sbin/nologin\n",
+    "news:x:9:9:news:/var/spool/news:/usr/sbin/nologin\n",
+    "uucp:x:10:10:uucp:/var/spool/uucp:/usr/sbin/nologin\n",
+    "proxy:x:13:13:proxy:/bin:/usr/sbin/nologin\n",
+    "www-data:x:33:33:www-data:/var/www:/usr/sbin/nologin\n",
+    "backup:x:34:34:backup:/var/backups:/usr/sbin/nologin\n",
+    "list:x:38:38:Mailing List Manager:/var/list:/usr/sbin/nologin\n",
+    "irc:x:39:39:ircd:/var/run/ircd:/usr/sbin/nologin\n",
+    "gnats:x:41:41:Gnats Bug-Reporting System (admin):/var/lib/gnats:/usr/sbin/nologin\n",
+    "nobody:x:65534:65534:nobody:/nonexistent:/usr/sbin/nologin\n",
+    "systemd-timesync:x:100:102:systemd Time Synchronization,,,:/run/systemd:/bin/false\n",
+    "systemd-network:x:101:103:systemd Network Management,,,:/run/systemd/netif:/bin/false\n",
+    "systemd-resolve:x:102:104:systemd Resolver,,,:/run/systemd/resolve:/bin/false\n",
+    "systemd-bus-proxy:x:103:105:systemd Bus Proxy,,,:/run/systemd:/bin/false\n",
+    "syslog:x:104:108::/home/syslog:/bin/false\n",
+    "_apt:x:105:65534::/nonexistent:/bin/false\n",
+    "messagebus:x:106:110::/var/run/dbus:/bin/false\n",
+    "uuidd:x:107:111::/run/uuidd:/bin/false\n",
+    "lightdm:x:108:114:Light Display Manager:/var/lib/lightdm:/bin/false\n",
+    "whoopsie:x:109:116::/nonexistent:/bin/false\n",
+    "avahi-autoipd:x:110:119:Avahi autoip daemon,,,:/var/lib/avahi-autoipd:/bin/false\n",
+    "avahi:x:111:120:Avahi mDNS daemon,,,:/var/run/avahi-daemon:/bin/false\n",
+    "dnsmasq:x:112:65534:dnsmasq,,,:/var/lib/misc:/bin/false\n",
+    "colord:x:113:123:colord colour management daemon,,,:/var/lib/colord:/bin/false\n",
+    "speech-dispatcher:x:114:29:Speech Dispatcher,,,:/var/run/speech-dispatcher:/bin/false\n",
+    "hplip:x:115:7:HPLIP system user,,,:/var/run/hplip:/bin/false\n",
+    "kernoops:x:116:65534:Kernel Oops Tracking Daemon,,,:/:/bin/false\n",
+    "pulse:x:117:124:PulseAudio daemon,,,:/var/run/pulse:/bin/false\n",
+    "rtkit:x:118:126:RealtimeKit,,,:/proc:/bin/false\n",
+    "saned:x:119:127::/var/lib/saned:/bin/false\n",
+    "usbmux:x:120:46:usbmux daemon,,,:/var/lib/usbmux:/bin/false\n",
+    "julien:x:1000:1000:Julien Barbier,,,:/home/julien:/bin/bash\n",
+    "guillaume:x:1001:1001:,,,:/home/guillaume:/bin/bash\n",
+    "betty:x:1002:1002::/home/betty:\n",
+    "julien@ubuntu:/tmp/0x02$\n",
+    "julien@ubuntu:/tmp/0x02$ ./22-users_and_homes \n",
+    "_apt:/nonexistent\n",
+    "avahi-autoipd:/var/lib/avahi-autoipd\n",
+    "avahi:/var/run/avahi-daemon\n",
+    "backup:/var/backups\n",
+    "betty:/home/betty\n",
+    "bin:/bin\n",
+    "colord:/var/lib/colord\n",
+    "daemon:/usr/sbin\n",
+    "dnsmasq:/var/lib/misc\n",
+    "games:/usr/games\n",
+    "gnats:/var/lib/gnats\n",
+    "guillaume:/home/guillaume\n",
+    "hplip:/var/run/hplip\n",
+    "irc:/var/run/ircd\n",
+    "julien:/home/julien\n",
+    "kernoops:/\n",
+    "lightdm:/var/lib/lightdm\n",
+    "list:/var/list\n",
+    "lp:/var/spool/lpd\n",
+    "mail:/var/mail\n",
+    "man:/var/cache/man\n",
+    "messagebus:/var/run/dbus\n",
+    "news:/var/spool/news\n",
+    "nobody:/nonexistent\n",
+    "proxy:/bin\n",
+    "pulse:/var/run/pulse\n",
+    "root:/root\n",
+    "rtkit:/proc\n",
+    "saned:/var/lib/saned\n",
+    "speech-dispatcher:/var/run/speech-dispatcher\n",
+    "sync:/bin\n",
+    "sys:/dev\n",
+    "syslog:/home/syslog\n",
+    "systemd-bus-proxy:/run/systemd\n",
+    "systemd-network:/run/systemd/netif\n",
+    "systemd-resolve:/run/systemd/resolve\n",
+    "systemd-timesync:/run/systemd\n",
+    "usbmux:/var/lib/usbmux\n",
+    "uucp:/var/spool/uucp\n",
+    "uuidd:/run/uuidd\n",
+    "whoopsie:/nonexistent\n",
+    "www-data:/var/www\n",
+    "julien@ubuntu:/tmp/0x02$ \n",
+    "```\n",
+    "\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `22-users_and_homes`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x02-shell_redirections/22-users_and_homes\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x02-shell_redirections/22-users_and_homes\n",
+    "#!/bin/bash\n",
+    "cut -d: -f1,6 /etc/passwd | sort -t: -k1,1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "!cut -d: -f1,6 /etc/passwd | sort -t: -k1,1 \n",
+    "!cat /etc/passwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "chmod u+x 0x02-shell_redirections/22-users_and_homes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_apt:/nonexistent\n",
+      "backup:/var/backups\n",
+      "bin:/bin\n",
+      "daemon:/usr/sbin\n",
+      "elkomy:/home/elkomy\n",
+      "fwupd-refresh:/run/systemd\n",
+      "games:/usr/games\n",
+      "gnats:/var/lib/gnats\n",
+      "irc:/var/run/ircd\n",
+      "landscape:/var/lib/landscape\n",
+      "list:/var/list\n",
+      "lp:/var/spool/lpd\n",
+      "lxd:/var/snap/lxd/common/lxd\n",
+      "mail:/var/mail\n",
+      "man:/var/cache/man\n",
+      "messagebus:/nonexistent\n",
+      "news:/var/spool/news\n",
+      "nobody:/nonexistent\n",
+      "pollinate:/var/cache/pollinate\n",
+      "proxy:/bin\n",
+      "root:/root\n",
+      "sshd:/run/sshd\n",
+      "sync:/bin\n",
+      "sys:/dev\n",
+      "syslog:/home/syslog\n",
+      "systemd-coredump:/\n",
+      "systemd-network:/run/systemd\n",
+      "systemd-resolve:/run/systemd\n",
+      "systemd-timesync:/run/systemd\n",
+      "tcpdump:/nonexistent\n",
+      "tss:/var/lib/tpm\n",
+      "uucp:/var/spool/uucp\n",
+      "uuidd:/run/uuidd\n",
+      "www-data:/var/www\n"
+     ]
+    }
+   ],
+   "source": [
+    "!echo \"Reverse\" | ./0x02-shell_redirections/22-users_and_homes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 35e37c5] esreveR\n",
+      " 2 files changed, 116 insertions(+), 4 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/21-reverse\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   c823c5c..35e37c5  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"22\"\n",
     "git push"
    ]
   }
