--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -3163,7 +3163,7 @@
     "##### Write a script that displays all users and their home directories, sorted by users.\n",
     "* Based on the the /etc/passwd file\n",
     "\n",
-    "\n",
+    "######\n",
     "```bash\n",
     "julien@ubuntu:/tmp/0x02$ cat /etc/passwd\n",
     "root:x:0:0:root:/root:/bin/bash\n",
@@ -3294,62 +3294,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "chmod u+x 0x02-shell_redirections/22-users_and_homes"
+    "%%capture\n",
+    "!chmod u+x 0x02-shell_redirections/22-users_and_homes\n",
+    "!./0x02-shell_redirections/22-users_and_homes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "_apt:/nonexistent\n",
-      "backup:/var/backups\n",
-      "bin:/bin\n",
-      "daemon:/usr/sbin\n",
-      "elkomy:/home/elkomy\n",
-      "fwupd-refresh:/run/systemd\n",
-      "games:/usr/games\n",
-      "gnats:/var/lib/gnats\n",
-      "irc:/var/run/ircd\n",
-      "landscape:/var/lib/landscape\n",
-      "list:/var/list\n",
-      "lp:/var/spool/lpd\n",
-      "lxd:/var/snap/lxd/common/lxd\n",
-      "mail:/var/mail\n",
-      "man:/var/cache/man\n",
-      "messagebus:/nonexistent\n",
-      "news:/var/spool/news\n",
-      "nobody:/nonexistent\n",
-      "pollinate:/var/cache/pollinate\n",
-      "proxy:/bin\n",
-      "root:/root\n",
-      "sshd:/run/sshd\n",
-      "sync:/bin\n",
-      "sys:/dev\n",
-      "syslog:/home/syslog\n",
-      "systemd-coredump:/\n",
-      "systemd-network:/run/systemd\n",
-      "systemd-resolve:/run/systemd\n",
-      "systemd-timesync:/run/systemd\n",
-      "tcpdump:/nonexistent\n",
-      "tss:/var/lib/tpm\n",
-      "uucp:/var/spool/uucp\n",
-      "uuidd:/run/uuidd\n",
-      "www-data:/var/www\n"
+      "[main 5006fc8] 22\n",
+      " 2 files changed, 255 insertions(+), 4 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/22-users_and_homes\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   35e37c5..5006fc8  main -> main\n"
      ]
     }
    ],
    "source": [
-    "!echo \"Reverse\" | ./0x02-shell_redirections/22-users_and_homes"
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"22\"\n",
+    "git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 23. Empty casks make the most noise</h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Write a command that finds all empty files and directories in the current directory and all sub-directories.\n",
+    "\n",
+    "* Only the names of the files and directories should be displayed (not the entire path)\n",
+    "* Hidden files should be listed\n",
+    "* One file name per line\n",
+    "* The listing should end with a new line\n",
+    "* You are not allowed to use `basename`, `grep`, `egrep`, `fgrep` or `rgrep`\n",
+    "\n",
+    "######\n",
+    "```bash\n",
+    "ubuntu@ip-172-31-63-244:~/0x02-shell_redirections$ ls -laR\n",
+    ".:\n",
+    "total 64\n",
+    "drwxrwxr-x 5 ubuntu ubuntu 4096 Oct  7 00:48 .\n",
+    "drwxrwxr-x 7 ubuntu ubuntu 4096 Sep 29 21:36 ..\n",
+    "-rwxrwxr-x 1 ubuntu ubuntu   56 Feb  8  2016 0-commas\n",
+    "drwxrwxr-x 2 ubuntu ubuntu 4096 Feb  8  2016 0-commas-checks\n",
+    "-rwxrwxr-x 1 ubuntu ubuntu   48 Feb  8  2016 1-empty_casks\n",
+    "-rwxrwxr-x 1 ubuntu ubuntu   68 Feb  8  2016 2-gifs\n",
+    "-rwxrwxr-x 1 ubuntu ubuntu   47 Feb  8  2016 3-directories\n",
+    "-rwxrwxr-x 1 ubuntu ubuntu   41 Feb  8  2016 4-zeros\n",
+    "-rwxrwxr-x 1 ubuntu ubuntu   43 Feb  8  2016 5-rot13\n",
+    "-rwxrwxr-x 1 ubuntu ubuntu   25 Feb  8  2016 6-odd\n",
+    "-rwxrwxr-x 1 ubuntu ubuntu   73 Feb  8  2016 7-sort_rot13\n",
+    "-rw-rw-r-- 1 ubuntu ubuntu    0 Oct  7 00:46 ........gif\n",
+    "-rw-rw-r-- 1 ubuntu ubuntu    0 Oct  7 00:47 ..hello.gif\n",
+    "drwxrwxr-x 2 ubuntu ubuntu 4096 Oct  7 00:41 javascript\n",
+    "-rw-rw-r-- 1 ubuntu ubuntu    0 Oct  7 00:48 Kris_is_awesome :)\n",
+    "-rw-rw-r-- 1 ubuntu ubuntu   14 Feb  8  2016 Makefile\n",
+    "-rw-rw-r-- 1 ubuntu ubuntu   69 Feb  8  2016 quote\n",
+    "-rw-rw-r-- 1 ubuntu ubuntu    0 Oct  7 00:24 Rona_napping.gif\n",
+    "-rw-rw-r-- 1 ubuntu ubuntu    0 Oct  6 23:59 root.gif\n",
+    "-rw-rw-r-- 1 ubuntu ubuntu    0 Mar 24  2016 ..something\n",
+    "drwxrwxr-x 3 ubuntu ubuntu 4096 Feb  8  2016 test_dir\n",
+    "-rwxrwxr-x 1 ubuntu ubuntu   54 Feb  8  2016 test.var\n",
+    "\n",
+    "./0-commas-checks:\n",
+    "total 16\n",
+    "drwxrwxr-x 2 ubuntu ubuntu 4096 Feb  8  2016 .\n",
+    "drwxrwxr-x 5 ubuntu ubuntu 4096 Oct  7 00:48 ..\n",
+    "-rw-rw-r-- 1 ubuntu ubuntu 1361 Feb  8  2016 28-check.php\n",
+    "-rw-rw-r-- 1 ubuntu ubuntu  481 Feb  8  2016 28-check.php~\n",
+    "\n",
+    "./javascript:\n",
+    "total 8\n",
+    "drwxrwxr-x 2 ubuntu ubuntu 4096 Oct  7 00:41 .\n",
+    "drwxrwxr-x 5 ubuntu ubuntu 4096 Oct  7 00:48 ..\n",
+    "\n",
+    "./test_dir:\n",
+    "total 12\n",
+    "drwxrwxr-x 3 ubuntu ubuntu 4096 Feb  8  2016 .\n",
+    "drwxrwxr-x 5 ubuntu ubuntu 4096 Oct  7 00:48 ..\n",
+    "-rw-rw-r-- 1 ubuntu ubuntu    0 Feb  8  2016 docker.gif\n",
+    "-rw-rw-r-- 1 ubuntu ubuntu    0 Feb  8  2016 file.sh\n",
+    "-rw-rw-r-- 1 ubuntu ubuntu    0 Feb  8  2016 .horrible_selfie.gif\n",
+    "drwxrwxr-x 2 ubuntu ubuntu 4096 Feb  8  2016 photos\n",
+    "-rw-rw-r-- 1 ubuntu ubuntu    0 Feb  8  2016 README.md\n",
+    "\n",
+    "./test_dir/photos:\n",
+    "total 8\n",
+    "drwxrwxr-x 2 ubuntu ubuntu 4096 Feb  8  2016 .\n",
+    "drwxrwxr-x 3 ubuntu ubuntu 4096 Feb  8  2016 ..\n",
+    "-rw-rw-r-- 1 ubuntu ubuntu    0 Feb  8  2016 cat.gif\n",
+    "-rw-rw-r-- 1 ubuntu ubuntu    0 Feb  8  2016 index.html\n",
+    "-rw-rw-r-- 1 ubuntu ubuntu    0 Feb  8  2016 main.gif\n",
+    "-rw-rw-r-- 1 ubuntu ubuntu    0 Feb  8  2016 rudy_rigot.gif\n",
+    "ubuntu@ip-172-31-63-244:~/0x02-shell_redirections$ ./100-empty_casks\n",
+    "Rona_napping.gif\n",
+    "javascript\n",
+    "root.gif\n",
+    "..something\n",
+    "Kris_is_awesome :)\n",
+    "..hello.gif\n",
+    "file.sh\n",
+    "docker.gif\n",
+    "README.md\n",
+    "index.html\n",
+    "main.gif\n",
+    "cat.gif\n",
+    "rudy_rigot.gif\n",
+    ".horrible_selfie.gif\n",
+    "........gif\n",
+    "ubuntu@ip-172-31-63-244:~/0x02-shell_redirections$\n",
+    "```\n",
+    "\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `100-empty_casks`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting 0x02-shell_redirections/100-empty_casks\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x02-shell_redirections/100-empty_casks\n",
+    "#!/bin/bash\n",
+    "find . -empty -printf \"%P\\n\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iacta\n",
+      ".git/branches\n",
+      ".git/refs/tags\n",
+      ".git/objects/info\n",
+      "test.HTML\n",
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "!find . -empty -printf \"%P\\n\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "!chmod u+x 0x02-shell_redirections/100-empty_casks\n",
+    "!./0x02-shell_redirections/100-empty_casks"
    ]
   },
   {
@@ -3361,9 +3513,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 35e37c5] esreveR\n",
-      " 2 files changed, 116 insertions(+), 4 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/21-reverse\n"
+      "[main 5006fc8] 22\n",
+      " 2 files changed, 255 insertions(+), 4 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/22-users_and_homes\n"
      ]
     },
     {
@@ -3371,14 +3523,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   c823c5c..35e37c5  main -> main\n"
+      "   35e37c5..5006fc8  main -> main\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"22\"\n",
+    "git commit -m \"100-empty_casks\"\n",
     "git push"
    ]
   }
