--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -3472,7 +3472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3480,9 +3480,9 @@
      "output_type": "stream",
      "text": [
       "iacta\n",
-      ".git/branches\n",
-      ".git/refs/tags\n",
-      ".git/objects/info\n",
+      "branches\n",
+      "tags\n",
+      "info\n",
       "test.HTML\n",
       "hello\n"
      ]
@@ -3490,7 +3490,7 @@
    ],
    "source": [
     "\n",
-    "!find . -empty -printf \"%P\\n\""
+    "!find . -empty -printf \"%f\\n\""
    ]
   },
   {
@@ -3506,16 +3506,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 5006fc8] 22\n",
-      " 2 files changed, 255 insertions(+), 4 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/22-users_and_homes\n"
+      "[main 3ee962f] 100-empty_casks\n",
+      " 2 files changed, 198 insertions(+), 44 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/100-empty_casks\n"
      ]
     },
     {
@@ -3523,7 +3523,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   35e37c5..5006fc8  main -> main\n"
+      "   5006fc8..3ee962f  main -> main\n"
      ]
     }
    ],
@@ -3533,6 +3533,13 @@
     "git commit -m \"100-empty_casks\"\n",
     "git push"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
