--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -3453,7 +3453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3467,12 +3467,12 @@
    "source": [
     "%%file 0x02-shell_redirections/100-empty_casks\n",
     "#!/bin/bash\n",
-    "find . -empty -printf \"%P\\n\""
+    "find . -empty -printf \"%f\\n\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3506,16 +3506,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 3ee962f] 100-empty_casks\n",
-      " 2 files changed, 198 insertions(+), 44 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/100-empty_casks\n"
+      "[main 82a6b12] 100-empty_casks\n",
+      " 1 file changed, 17 insertions(+), 10 deletions(-)\n"
      ]
     },
     {
@@ -3523,7 +3522,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   5006fc8..3ee962f  main -> main\n"
+      "   3ee962f..82a6b12  main -> main\n"
      ]
     }
    ],
