--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -3495,7 +3495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3506,15 +3506,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 82a6b12] 100-empty_casks\n",
-      " 1 file changed, 17 insertions(+), 10 deletions(-)\n"
+      "[main 2a29647] 100-empty_casks\n",
+      " 2 files changed, 8 insertions(+), 9 deletions(-)\n"
      ]
     },
     {
@@ -3522,7 +3522,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   3ee962f..82a6b12  main -> main\n"
+      "   82a6b12..2a29647  main -> main\n"
      ]
     }
    ],
@@ -3534,11 +3534,219 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "  <summary>explanations</summary>\n",
+    "\n",
+    "| Placeholder | Description |\n",
+    "|-------------|-------------|\n",
+    "| `%f` | File name without directory |\n",
+    "| `%p` | Full path of the file |\n",
+    "| `%h` | Directory part of the path |\n",
+    "| `%t` | File type |\n",
+    "| `%s` | File size in bytes |\n",
+    "| `%u` | User ownership |\n",
+    "| `%g` | Group ownership |\n",
+    "| `%m` | File permissions in octal |\n",
+    "| `%A@` | Last access time in human-readable format |\n",
+    "| `%P` | Path of the file relative to the starting point |\n",
+    "| `%k` | File size in 1K blocks |\n",
+    "| `%T@` | Modification time in human-readable format |\n",
+    "| `%C@` | Status change time in human-readable format |\n",
+    "| `%i` | File’s inode number |\n",
+    "| `%n` | Number of hard links to file |\n",
+    "| `%l` | Object of symbolic link |\n",
+    "| `%d` | Depth of the file in the directory tree |\n",
+    "| `%Y` | File type (like `%t`), but follow symbolic links |\n",
+    "| `%G` | Group name of file’s owner |\n",
+    "| `%U` | User name of file’s owner |\n",
+    "\n",
+    "</details>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 24. A gif is worth ten thousand words</h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Write a script that lists all the files with a `.gif` extension in the current directory and all its sub-directories.\n",
+    "\n",
+    "* Hidden files should be listed\n",
+    "* Only regular files (not directories) should be listed\n",
+    "* The names of the files should be displayed without their extensions\n",
+    "* The files should be sorted by byte values, but case-insensitive (file `aaa` should be listed before file `bbb`, file `.b` should be listed before file `a`, and file `Rona` should be listed after file `jay`)\n",
+    "* One file name per line\n",
+    "* The listing should end with a new line\n",
+    "* You are not allowed to use `basename`, `grep`, `egrep`, `fgrep` or `rgrep`\n",
+    "\n",
+    "######\n",
+    "```bash\n",
+    " julien@production-503e7013:~/shell/fun_with_the_shell$ ls -Rla\n",
+    "    .:\n",
+    "    total 28\n",
+    "    drwxrwxr-x 3 julien julien 4096 Jan 20 03:35 .\n",
+    "    drwxrwxr-x 3 julien julien 4096 Jan 20 02:58 ..\n",
+    "    -rwxr--r-- 1 julien julien 43 Jan 20 02:59 0-commas\n",
+    "    -rwxr--r-- 1 julien julien 47 Jan 20 02:50 1-empty_casks\n",
+    "    -rwxrw-r-- 1 julien julien 68 Jan 20 03:35 2-gifs\n",
+    "    -rw-rw-r-- 1 julien julien 14 Jan 20 03:35 Makefile\n",
+    "    drwxrwxr-x 4 julien julien 4096 Jan 20 03:42 test_dir\n",
+    "\n",
+    "    ./test_dir:\n",
+    "    total 16\n",
+    "    drwxrwxr-x 4 julien julien 4096 Jan 20 03:42 .\n",
+    "    drwxrwxr-x 3 julien julien 4096 Jan 20 03:35 ..\n",
+    "    -rw-rw-r-- 1 julien julien 0 Jan 20 03:40 .horrible_selfie.gif\n",
+    "    -rw-rw-r-- 1 julien julien 0 Jan 20 03:23 README.md\n",
+    "    -rw-rw-r-- 1 julien julien 0 Jan 20 03:17 docker.gif\n",
+    "    -rw-rw-r-- 1 julien julien 0 Jan 20 03:17 file.sh\n",
+    "    drwxrwxr-x 2 julien julien 4096 Jan 20 03:23 photos\n",
+    "    drwxrwxr-x 2 julien julien 4096 Jan 20 03:23 rep.gif\n",
+    "\n",
+    "    ./test_dir/photos:\n",
+    "    total 8\n",
+    "    drwxrwxr-x 2 julien julien 4096 Jan 20 03:23 .\n",
+    "    drwxrwxr-x 4 julien julien 4096 Jan 20 03:42 ..\n",
+    "    -rw-rw-r-- 1 julien julien 0 Jan 20 03:23 cat.gif\n",
+    "    -rw-rw-r-- 1 julien julien 0 Jan 20 03:22 index.html\n",
+    "    -rw-rw-r-- 1 julien julien 0 Jan 20 03:23 main.gif\n",
+    "    -rw-rw-r-- 1 julien julien 0 Jan 20 03:23 Electra_napping.gif\n",
+    "\n",
+    "    ./test_dir/rep.gif:\n",
+    "    total 8\n",
+    "    drwxrwxr-x 2 julien julien 4096 Jan 20 03:23 .\n",
+    "    drwxrwxr-x 4 julien julien 4096 Jan 20 03:42 ..\n",
+    "    julien@production-503e7013:~/shell/fun_with_the_shell$ ./101-gifs\n",
+    "    .horrible_selfie\n",
+    "    cat\n",
+    "    docker\n",
+    "    Electra_napping\n",
+    "    main\n",
+    "    julien@production-503e7013:~/shell/fun_with_the_shell$\n",
+    "```\n",
+    "\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `101-gifs`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x02-shell_redirections/101-gifs\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x02-shell_redirections/101-gifs\n",
+    "#!/bin/bash\n",
+    "!find -type f -name \"*.gif\" | cut -d \"/\" -f 2 | cut -d '.' -f 1 | LC_ALL=C sort -f  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test\n"
+     ]
+    }
+   ],
+   "source": [
+    "!find -type f -name \"*.gif\" | cut -d \"/\" -f 2 | cut -d '.' -f 1 | LC_ALL=C sort -f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "!LC_ALL=C sort -f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "!chmod u+x 0x02-shell_redirections/101-gifs\n",
+    "!./0x02-shell_redirections/101-gifs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 2a29647] 100-empty_casks\n",
+      " 2 files changed, 8 insertions(+), 9 deletions(-)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   82a6b12..2a29647  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"100-empty_casks\"\n",
+    "git push"
+   ]
   }
  ],
  "metadata": {
