--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -3657,21 +3657,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x02-shell_redirections/101-gifs\n"
+      "Overwriting 0x02-shell_redirections/101-gifs\n"
      ]
     }
    ],
    "source": [
     "%%file 0x02-shell_redirections/101-gifs\n",
     "#!/bin/bash\n",
-    "!find -type f -name \"*.gif\" | cut -d \"/\" -f 2 | cut -d '.' -f 1 | LC_ALL=C sort -f  "
+    "find -type f -name \"*.gif\" | cut -d \"/\" -f 2 | cut -d '.' -f 1 | LC_ALL=C sort -f  "
    ]
   },
   {
@@ -3710,7 +3710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3721,15 +3721,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 2a29647] 100-empty_casks\n",
-      " 2 files changed, 8 insertions(+), 9 deletions(-)\n"
+      "[main 00e953c] 101-gifs\n",
+      " 3 files changed, 216 insertions(+), 5 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/101-gifs\n",
+      " create mode 100644 test.gif\n"
      ]
     },
     {
@@ -3737,16 +3739,23 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   82a6b12..2a29647  main -> main\n"
+      "   2a29647..00e953c  main -> main\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"100-empty_casks\"\n",
+    "git commit -m \"101-gifs\"\n",
     "git push"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
